--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
     --alternative-background-blog:#FAC213;
     --background-blog:#48cfad;
     --black-steam:#252121;
+    
+    --DM-sans-serif:'DM Sans', sans-serif;
 
     --sm:1.2rem:
     --mm:1.4rem;
@@ -17,7 +19,7 @@
 }
 html{
     font-size: 62.5%;
-    font-family: sans-serif;
+    font-family: 'DM Sans', sans-serif;
 }
 body{
     width: 100vw;
@@ -26,7 +28,7 @@ body{
 }
 header{
     width: 100%;
-    height: 30%;
+    height: 22%;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 35% 65%;
@@ -73,12 +75,12 @@ a{
 }
 /*MAIN*/
 main{
-    height: 70%;
+    height: 78%;
 }
 .main-section{
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 45% 55%;
+    grid-template-rows: 40% 60%;
     
 
     width: 100%;
@@ -92,8 +94,32 @@ main{
     
 
 .main-section__title{
-    place-self: center;
+    place-self: center;   
+}
+.main-section .main-section__title p{
+    padding: 0 0.2rem;
+    font-size: var(--hm);
+    font-weight: 700;
+    line-height: 3rem;
+    color: white;
+}
+/*Button*/
+/* .main-section__button-container button{
+     var(--background-blog);
+} */
+.main-section__button-container a{
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 5px;
+ 
     font-size: var(--Mmm);
     font-weight: 700;
-    color: white;
+    font-family: var(--DM-sans-serif);
+    color: var(--black-steam);
+    background-color:var(--background-blog);
+}
+.button-container--active:hover{
+    border: 2px solid cornsilk;
+    transform: scale(2.2);
+
 }
