--- a/css/blogsPageStyle.css
+++ b/css/blogsPageStyle.css
@@ -17,6 +17,7 @@ header{
 /*the icon styles are in font folder*/
 .icon-container{
     width: 100%;
+    padding: 1rem 0;
     display: flex;
     justify-content: space-around;
     align-items:center;
@@ -53,9 +54,10 @@ a{
 
 /*firts section - principals news*/
 .main-news{
-    width: 100%;
+    display: grid;
+    grid-template-columns: 100%;
     background-color: var(--soft-grey);
-    padding: 2rem 0;
+    padding: 3rem 0;
 }
 .news-container{
     display: grid;
@@ -65,36 +67,51 @@ a{
     margin: 0 auto;
   
 }
+.news-container .news-container__intro{
+    display: flex;
+    flex-direction: column;
+}
 .news-container .news-container__intro-title{
     font-size: var(--mm);
     font-weight: 700;
     margin-bottom: 0.8rem;
+    color: var(--black-steamç);
 }
+/* .news-container figure{
+    width: 100%;
+    height: 100%;
+} */
 .news-container__picture{
     width: 100%;
     height: auto;
+    object-fit: contain;
 }
 /*Article*/
-.news-container__article-container{
-  /*   padding: 0 2rem; */
+.article-container{
+    display: flex;
+    flex-direction: column;
+}
+.news-container__article{
+  height: auto;
 }
 .news-container__article-title{
     font-size: var(--hm);
     font-weight: 700;
     margin-bottom: 1.6rem;
+    color: var(--black-steam);
 }
 .news-container__article-text{
     font-size: var(--Msm);
     font-weight: 500;
-    margin-bottom: 3.5rem;
+    margin-bottom: 1rem;
     line-height: 1.8rem;
 }
 .news-container__article-button{
-  
-   padding: 1rem 1.5rem;
-   font-size: var(--sm);
-   font-weight: 700;
-   background-color: var(--background-blog);
-   color: var(--black-steam);
-   text-decoration: none;
+    align-self: flex-start;
+    padding: 1rem 1.5rem;
+    font-size: var(--sm);
+    font-weight: 700;
+    background-color: var(--background-blog);
+    color: var(--black-steam);
 }
+/*Second section - blogs section*/
