--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     --alternative-background-blog:#FAC213;
     --background-blog:#48cfad;
     --soft-grey:#e6e9ed;
+    --grey-lines:#f1f3f5;
     --black-steam:#252121;
     
     --Robot-serif:'Roboto', sans-serif;
