--- a/css/blogsPageStyle.css
+++ b/css/blogsPageStyle.css
@@ -1,14 +1,14 @@
 body{
-    width: 100vw;
+  /*   width: 100vw; */
+    height: auto;
     min-width: 300px;
 }
 header{
     width: 100%;
-    height: 22%;
+    height: 13rem;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 35% 65%;
-    /* grid-auto-flow: row; */
+    grid-template-rows: 1fr 4fr;
 
 }
 /*HEADER*/
@@ -29,9 +29,6 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.nav-bar-container .logo{
-    height: auto;
 }
 .nav-bar-container .logo img{
     width: 20rem;
@@ -57,7 +54,8 @@ a{
     display: grid;
     grid-template-columns: 100%;
     background-color: var(--soft-grey);
-    padding: 3rem 0;
+    padding: 2rem 0;
+    
 }
 .news-container{
     display: grid;
@@ -66,20 +64,12 @@ a{
     width: 80%;
     margin: 0 auto;  
 }
-/* .news-container .news-container__intro{
-    display: flex;
-    flex-direction: column;
-} */
 .news-container .news-container__intro-title{
     font-size: var(--mm);
     font-weight: 700;
     margin-bottom: 0.8rem;
     color: var(--black-steamç);
 }
-/* .news-container figure{
-    width: 100%;
-    height: 100%;
-} */
 .news-container__picture{
     width: 100%;
     height: 100%;
@@ -115,19 +105,20 @@ a{
 
 .main-blogs{
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%; 
     width: 90%;
     margin: 0 auto;
-    margin-bottom: 5rem;
-}
+    padding-bottom: 10px;
+} 
 /*Title*/
-.main-blogs__title{
-    padding: 1.5rem 0;
-    margin-bottom: 2rem;
-    border-bottom: 1.5px solid var(--grey-lines);
+.main-blogs__title-container{
+    
+    border-bottom: 1px solid var(--grey-lines);
     text-align: center;
 }
-.main-blogs__title p{
+.main-blogs__title{
+    
+    padding: 1.5rem 0;
     font-size: var(--Msm);
     font-weight: 600;
 }
@@ -136,16 +127,16 @@ a{
 .main-blogs__grid-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, 25rem);
-    gap: 1.5rem;
     place-content: center;
+    gap: 1.5rem;
+    margin-top: 2rem;
+   
 }
 
 .item-article{
-    /* display: flex;
-    flex-direction: column;
-    height: 500px; */
+   
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
     grid-template-rows: auto auto 1fr auto;
   
 }
@@ -170,6 +161,7 @@ a{
 .item-article h2{
     margin-top: 2rem;
     margin-bottom: 2rem;
+    font-size: var(--Mmm);
 }
 .item-article p{
     margin-bottom: 2rem;
