--- a/css/blogsPageStyle.css
+++ b/css/blogsPageStyle.css
@@ -145,7 +145,7 @@ a{
     height: 150px;
 }
 .item-img--post1{
-    background: url('../assets/img/post-1.png') no-repeat center/cover;
+    background: url('../assets/img/Kaho-and-knight.jpg') no-repeat center/cover;
    
 }
 .item-img--post2{
@@ -154,6 +154,10 @@ a{
 }
 .item-img--post3{
     background: url('../assets/img/post-3.png') no-repeat center/cover;
+   
+}
+.item-img--post5{
+    background: url('../assets/img/post-1.png') no-repeat center/cover;
    
 }
 /*Blog articles*/
@@ -186,21 +190,3 @@ a{
     border: 1px solid #268d73;
 }
 
-/*FOOTER*/
-footer{
-    position: relative;
-    top:0;
-    width: 100%;
-    height: 6rem;
-    border-top: 2rem solid var(--background-blog);
-    background-color: var(--blog-footer);
-    text-align: center;
-   
-    
-}
-footer p{
-    margin-top: 2rem;
-    font-size: var(--Msm);
-    font-weight: 500;
-    color:white;
-}
