--- a/css/blogDetailStyle.css
+++ b/css/blogDetailStyle.css
@@ -9,13 +9,10 @@ body{
     width: 90%;
     min-width: 288px;
     max-width: 900px;
-    
-    margin: 0 auto;
+    margin: 0 auto;  
 }
 .blog-picture__img{
     width: 100%;
-    height: 100%;
-
     object-fit: cover;
 }
 /*Second section - News*/
@@ -71,9 +68,19 @@ body{
     width: 100px;
     height: 100px;
 }
-.contact-section__text{
-   
+.contact-section__text a{
+    font-size: var(--Msm);
+    font-weight: 300;
+    color: var(--black-steam);
+    text-decoration: underline;
 }
+.contact-section__text p{
+    margin-top: 1rem;
+    font-weight: 300;
+    font-size: var(--sm);
+}
+    
+   
 
 
 
